# tuskitoo

./: .coveragerc  .gitattributes  .gitignore  .pylintrc  .readthedocs.yml  CHANGELOG.rst  CONTRIBUTING.md  Dockerfile  README.md  README.rst  pyproject.toml  req-docs.txt  reqs.txt  setup.py  tox.ini
.github/: labeler.yml
.github/workflows/: python-package.yml  test.yaml
Tudspek/: __init__.py
docs/: conf.py  index.rst  spelling_wordlist.txt
docs/contents/: 10_introduction.rst  20_why_this_package.rst  30_usage.rst  40_modules.rst  tudspek.rst
docs/docs/api/: tuskitoo.SpectralExtraction.Expectra2D.rst  tuskitoo.SpectralExtraction.fitting.rst  tuskitoo.SpectralExtraction.function_maker.rst  tuskitoo.SpectralExtraction.rst  tuskitoo.SpectralExtraction.spectra_2d.rst  (+14 more)
docs/source/: conf.py  index.rst
notebooks/: telluric.ipynb  teluricc_combine.ipynb
scripts/: clean_rst.py  fix_posargs.py  parse_version.py
spectral_tool_box/: __init__.py
spectral_tool_box/microlensing_analysis/: windows.py
spectral_tool_box/ploting/: ploting.py
spectral_tool_box/sky_sub/: main_sky_sub.py
spectral_tool_box/spectral_extraction/: main_spectral_extraction.py  ploting.py
spectral_tool_box/spectral_tools/: spectral_tools.py
tests/: smoke_test.py  test_0.py  test_cli.py  test_invoking_cli.py
tudspek/: cli.py
tudspek/spectral_tools/: spectral_tools.py
tuskitoo/: __main__.py
tuskitoo/SpectralExtraction/: Expectra2D.py
tuskitoo/ploting/: ploting.py
tuskitoo/spectral_extraction/: main_spectral_extraction.py
tuskitoo/spectral_tools/: spectral_tools.py
(+18 files in other folders)
