[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "Tudspek"
readme = "README.md"
version = "0.0.1"
description = "Tudspek: Two dimesional spectral kit"
requires-python = ">=3.10"
authors = [
    {name = "Felipe Avila-Vera", email = "felipe.avilav@postgrado.uv.cl"}
]
maintainers = [
  {name = "Felipe Avila-Vera", email = "felipe.avilav@postgrado.uv.cl"}
]
license = {text = "MIT License"}

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10"
]

dependencies = ["astropy >=6.0","scipy >=1.11.4"
, "pandas>=2.2.0" ,"matplotlib>=3.8.2","parallelbar>=2.4","pytest>=7.0", "numpy==1.26","lmfit","parallelbar","h5py"]

urls = {repository = "https://github.com/felavila/Tudspek"}

[tool.pyright]
reportIncompatibleMethodOverride = true
include = ["Tudspek", "tests"]

[tool.pytest.ini_options]
# Specify options here
minversion = "6.0"
addopts = "--verbose"
testpaths = [
    "tests",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.3.3"
]